--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My GitHub Website</title>
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my site hosted on GitHub Pages.</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name – PhD Student</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        header { background: #2c3e50; color: #fff; padding: 2rem 1rem; text-align: center; }
+        nav { background: #34495e; padding: 0.5rem 0; text-align: center; }
+        nav a { color: #fff; margin: 0 1rem; text-decoration: none; }
+        section { max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
+        h2 { border-bottom: 1px solid #eee; padding-bottom: 0.5rem; }
+        ul { list-style: disc inside; }
+        .contact { background: #f8f8f8; padding: 1rem; border-radius: 8px; }
+        footer { text-align: center; padding: 1rem; background: #eee; color: #555; }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>PhD Student, Department of XYZ<br>University Name</p>
+    </header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#research">Research</a>
+        <a href="#publications">Publications</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Brief introduction about your background, research interests, and academic journey.</p>
+    </section>
+    <section id="research">
+        <h2>Research Interests</h2>
+        <ul>
+            <li>Topic 1</li>
+            <li>Topic 2</li>
+            <li>Topic 3</li>
+        </ul>
+    </section>
+    <section id="publications">
+        <h2>Publications</h2>
+        <ul>
+            <li>Author, "Title of Paper," <em>Journal Name</em>, Year.</li>
+            <li>Author, "Title of Paper," <em>Conference Name</em>, Year.</li>
+        </ul>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><strong>Project Title 1</strong> – Short description of the project.</li>
+            <li><strong>Project Title 2</strong> – Short description of the project.</li>
+        </ul>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <div class="contact">
+            <p>Email: your.email@university.edu</p>
+            <p>Office: Room 123, Building Name</p>
+            <p>
+                <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
+                <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+            </p>
+        </div>
+    </section>
+    <footer>
+        &copy; 2025 Your Name. All rights reserved.
+    </footer>
+</body>
 </html>
